<resources>
  <string name="app_name">DoubanMovie</string>
  <string name="movie_name_test">肖申克的救赎</string>
  <string name="movie_type_test">剧情/犯罪</string>
  <string name="movie_release_date_test">1994-09-10(多伦多电影节)/1994-10-14(美国)</string>
  <string name="movie_length_test">142分钟</string>
  <string name="movie_description_test">20世纪40年代末，小有成就的青年银行家安迪（蒂姆·罗宾斯TimRobbins饰）因涉嫌杀害妻子及她的情人而锒铛入狱。在这座名为肖申克的监狱内，希望似乎虚无缥缈，终身监禁的惩罚无疑注定了安迪接下来灰暗绝望的人生。未过多久，安迪尝试接近囚犯中颇有声望的瑞德（摩根·弗里曼MorganFreeman饰），请求对方帮自己搞来小锤子。以此为契机，二人逐渐熟稔，安迪也仿佛在鱼龙混杂、罪恶横生、黑白混淆的牢狱中找到属于自己的求生之道。他利用自身的专业知识，帮助监狱管理层逃税、洗黑钱，同时凭借与瑞德的交往在犯人中间也渐渐受到礼遇。表面看来，他已如瑞德那样对那堵高墙从憎恨转变为处之泰然，但是对自由的渴望仍促使他朝着心中的希望和目标前进。而关于其罪行的真相，似乎更使这一切朝前推进了一步</string>
  <string name="movie_score_test">9.6</string>
  <string name="movie_evaluation_test">1156729人</string>

  <string name="movie_info_test">9.6分/剧情 犯罪/1994-09-10(多伦多电影节)</string>
</resources>
